fix overflow bug

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ img{
 
 body{
     position: relative;
+    overflow-x: none;
 }
 
 /*Header Styling*/
